.provarCaches/00Df2000001KKNJEA4/objects/Incap311__Activity_Outcome_Response__c.object
<CustomObject>
    <fields>
        <fullName>AutorabitExtId__c</fullName>
        <description>External Id created by AutoRABIT</description>
        <externalId>true</externalId>
        <label>AutorabitExtId__c</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incap311__Activity_Outcome__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Activity Outcome</description>
        <inlineHelpText>Activity Outcome</inlineHelpText>
        <label>Activity Outcome</label>
        <referenceTo>Incap311__Activity_Outcome__c</referenceTo>
        <relationshipLabel>Activity Outcome Responses</relationshipLabel>
        <relationshipName>Activity_Outcome_Responses</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Incap311__Activity__c</fullName>
        <formula>Incap311__Activity_Outcome__r.Incap311__Activity_Name__c</formula>
        <label>Activity</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incap311__Additional_Comments_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Additional Comments Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Incap311__Canned_Response__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Canned Response</description>
        <inlineHelpText>Canned Response</inlineHelpText>
        <label>Canned Response</label>
        <referenceTo>Incap311__Response__c</referenceTo>
        <relationshipLabel>Activity Outcome Responses</relationshipLabel>
        <relationshipName>Activity_Outcome_Responses</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Incap311__Case_Closure_Reason__c</fullName>
        <label>Case Closure Reason</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incap311__Internal_Comments_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Internal Comments Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Incap311__Is_Default__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Incap311__Order__c</fullName>
        <formula>if( iSNULL(Incap311__Override_Order__c ),  Incap311__Canned_Response__r.Incap311__Order__c ,Incap311__Override_Order__c )</formula>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Incap311__Outcome__c</fullName>
        <formula>Incap311__Activity_Outcome__r.Name</formula>
        <label>Outcome</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incap311__Override_Order__c</fullName>
        <label>Override Order</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Incap311__Response_Code__c</fullName>
        <formula>Incap311__Canned_Response__r.Incap311__Response_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Response Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incap311__Response__c</fullName>
        <formula>Incap311__Canned_Response__r.Name</formula>
        <label>Response</label>
        <type>Text</type>
    </fields>
    <label>Activity Outcome Response</label>
    <nameField>
        <displayFormat>AOR-{00000000}</displayFormat>
        <label>Activity Outcome Response Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Activity Outcome Responses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>